# Hangman

./: CMakeLists.txt
data/: words.txt
include/: Game.hpp  Input.hpp  WordProvider.hpp
src/: Game.cpp  Input.cpp  WordProvider.cpp  main.cpp
